--- a/boost/dll/load_mode/type.html
+++ b/boost/dll/load_mode/type.html
@@ -7,7 +7,7 @@
 <link rel="home" href="../../../index.html" title="Chapter&#160;1.&#160;Boost.DLL">
 <link rel="up" href="../../../boost_dll/reference.html#header.boost.dll.shared_library_load_mode_hpp" title="Header &lt;boost/dll/shared_library_load_mode.hpp&gt;">
 <link rel="prev" href="../shared_library.html" title="Class shared_library">
-<link rel="next" href="../import.html" title="Function import">
+<link rel="next" href="../experimental/smart_library.html" title="Class smart_library">
 </head>
 <body bgcolor="white" text="black" link="#0000FF" vlink="#840084" alink="#0000FF">
 <table cellpadding="2" width="100%"><tr>
@@ -20,7 +20,7 @@
 </tr></table>
 <hr>
 <div class="spirit-nav">
-<a accesskey="p" href="../shared_library.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/prev.png" alt="Prev"></a><a accesskey="u" href="../../../boost_dll/reference.html#header.boost.dll.shared_library_load_mode_hpp"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/up.png" alt="Up"></a><a accesskey="h" href="../../../index.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/home.png" alt="Home"></a><a accesskey="n" href="../import.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/next.png" alt="Next"></a>
+<a accesskey="p" href="../shared_library.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/prev.png" alt="Prev"></a><a accesskey="u" href="../../../boost_dll/reference.html#header.boost.dll.shared_library_load_mode_hpp"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/up.png" alt="Up"></a><a accesskey="h" href="../../../index.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/home.png" alt="Home"></a><a accesskey="n" href="../experimental/smart_library.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/next.png" alt="Next"></a>
 </div>
 <div class="refentry">
 <a name="boost.dll.load_mode.type"></a><div class="titlepage"></div>
@@ -35,9 +35,9 @@
 <span class="keyword">enum</span> <span class="identifier">type</span> <span class="special">{</span> <a class="link" href="type.html#boost.dll.load_mode.type.default_mode">default_mode</a>, <a class="link" href="type.html#boost.dll.load_mode.type.dont_resolve_dll_references">dont_resolve_dll_references</a>, 
             <a class="link" href="type.html#boost.dll.load_mode.type.load_ignore_code_authz_level">load_ignore_code_authz_level</a>, <a class="link" href="type.html#boost.dll.load_mode.type.load_with_altered_search_path">load_with_altered_search_path</a>, 
             <a class="link" href="type.html#boost.dll.load_mode.type.rtld_lazy">rtld_lazy</a>, <a class="link" href="type.html#boost.dll.load_mode.type.rtld_now">rtld_now</a>, <a class="link" href="type.html#boost.dll.load_mode.type.rtld_global">rtld_global</a>, <a class="link" href="type.html#boost.dll.load_mode.type.rtld_local">rtld_local</a>, <a class="link" href="type.html#boost.dll.load_mode.type.rtld_deepbind">rtld_deepbind</a>, 
-            <a class="link" href="type.html#boost.dll.load_mode.type.append_decorations">append_decorations</a> <span class="special">}</span><span class="special">;</span></pre></div>
+            <a class="link" href="type.html#boost.dll.load_mode.type.append_decorations">append_decorations</a>, <a class="link" href="type.html#boost.dll.load_mode.type.search_system_folders">search_system_folders</a> <span class="special">}</span><span class="special">;</span></pre></div>
 <div class="refsect1">
-<a name="idm46068473919408"></a><h2>Description</h2>
+<a name="idm46849977549056"></a><h2>Description</h2>
 <p>Library load modes.</p>
 <p>Each of system family provides own modes. Flags not supported by a particular platform will be silently ignored.</p>
 <p>For a detailed description of platform specific options see: <a href="http://msdn.microsoft.com/en-us/library/windows/desktop/ms684179(v=vs.85).aspx" target="_top">Windows specific options</a>, <a href="http://pubs.opengroup.org/onlinepubs/000095399/functions/dlopen.html" target="_top">POSIX specific options</a>. </p>
@@ -108,6 +108,12 @@
 </pre>
 <p> </p>
 </dd>
+<dt><span class="term"><code class="computeroutput">search_system_folders</code><a name="boost.dll.load_mode.type.search_system_folders"></a></span></dt>
+<dd>
+<p><span class="bold"><strong>Platforms:</strong></span> Windows, POSIX</p>
+<p><span class="bold"><strong>Default:</strong></span> disabled</p>
+<p>Allow loading from system folders if path to library contains no parent path. </p>
+</dd>
 </dl></div>
 </div>
 </div>
@@ -121,7 +127,7 @@
 </tr></table>
 <hr>
 <div class="spirit-nav">
-<a accesskey="p" href="../shared_library.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/prev.png" alt="Prev"></a><a accesskey="u" href="../../../boost_dll/reference.html#header.boost.dll.shared_library_load_mode_hpp"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/up.png" alt="Up"></a><a accesskey="h" href="../../../index.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/home.png" alt="Home"></a><a accesskey="n" href="../import.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/next.png" alt="Next"></a>
+<a accesskey="p" href="../shared_library.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/prev.png" alt="Prev"></a><a accesskey="u" href="../../../boost_dll/reference.html#header.boost.dll.shared_library_load_mode_hpp"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/up.png" alt="Up"></a><a accesskey="h" href="../../../index.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/home.png" alt="Home"></a><a accesskey="n" href="../experimental/smart_library.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/next.png" alt="Next"></a>
 </div>
 </body>
 </html>
