--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 <dt><span class="section"><a href="boost_dll/tutorial.html#boost_dll.tutorial.importing_a_c_function_from_windows_dll">Importing
       a C function from Windows dll</a></span></dt>
 </dl></dd>
+<dt><span class="section"><a href="boost_dll/missuses.html">Missuses</a></span></dt>
 <dt><span class="section"><a href="boost_dll/reference.html">Reference</a></span></dt>
 <dd><dl>
 <dt><span class="section"><a href="boost_dll/reference.html#shared_library_reference">Shared Library Reference</a></span></dt>
@@ -91,6 +92,7 @@
 </dl></dd>
 <dt><span class="section"><a href="boost_dll/dependencies.html">Dependencies</a></span></dt>
 <dt><span class="section"><a href="boost_dll/revision_history.html">Revision History</a></span></dt>
+<dt><span class="section"><a href="boost_dll/acknowledgements.html">Acknowledgements</a></span></dt>
 </dl>
 </div>
 <div class="section">
@@ -132,7 +134,7 @@
 </div>
 </div>
 <table xmlns:rev="http://www.cs.rpi.edu/~gregod/boost/tools/doc/revision" width="100%"><tr>
-<td align="left"><p><small>Last revised: February 23, 2016 at 15:28:35 GMT</small></p></td>
+<td align="left"><p><small>Last revised: March 10, 2016 at 20:11:26 GMT</small></p></td>
 <td align="right"><div class="copyright-footer"></div></td>
 </tr></table>
 <hr>
