--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
 <dt><span class="section"><a href="boost_dll/tutorial.html#boost_dll.tutorial.importing_a_c_function_from_windows_dll">Importing
       a C function from Windows dll</a></span></dt>
 </dl></dd>
+<dt><span class="section"><a href="boost_dll/mangled_import.html">Mangled Import</a></span></dt>
+<dd><dl>
+<dt><span class="section"><a href="boost_dll/mangled_import.html#boost_dll.mangled_import.support___requirements">Support
+      &amp; Requirements</a></span></dt>
+<dt><span class="section"><a href="boost_dll/mangled_import.html#boost_dll.mangled_import.mangled_import_example">Mangled
+      Import Example</a></span></dt>
+<dt><span class="section"><a href="boost_dll/mangled_import.html#boost_dll.mangled_import.class_import">Class Import</a></span></dt>
+<dt><span class="section"><a href="boost_dll/mangled_import.html#boost_dll.mangled_import.overloading_qualifiers">Overloading
+      qualifiers</a></span></dt>
+</dl></dd>
 <dt><span class="section"><a href="boost_dll/missuses.html">Missuses</a></span></dt>
 <dt><span class="section"><a href="boost_dll/reference.html">Reference</a></span></dt>
 <dd><dl>
@@ -76,6 +86,7 @@
       defined section names (Fails on SunOS + Oracle Solaris Studio Compilers)</a></span></dt>
 <dt><span class="section"><a href="boost_dll/limitations.html#boost_dll.limitations.multithread">Thread safe library
       loading (Fails on FreeBSD, MacOS, iOS and some other)</a></span></dt>
+<dt><span class="section"><a href="boost_dll/limitations.html#boost_dll.limitations.nested">Nested Function Definitions</a></span></dt>
 </dl></dd>
 <dt><span class="section"><a href="boost_dll/f_a_q_.html">F.A.Q.</a></span></dt>
 <dt><span class="section"><a href="boost_dll/design_rationale.html">Design Rationale</a></span></dt>
@@ -134,7 +145,7 @@
 </div>
 </div>
 <table xmlns:rev="http://www.cs.rpi.edu/~gregod/boost/tools/doc/revision" width="100%"><tr>
-<td align="left"><p><small>Last revised: May 27, 2016 at 05:45:42 GMT</small></p></td>
+<td align="left"><p><small>Last revised: June 04, 2016 at 08:37:53 GMT</small></p></td>
 <td align="right"><div class="copyright-footer"></div></td>
 </tr></table>
 <hr>
