--- a/boost_dll/tutorial.html
+++ b/boost_dll/tutorial.html
@@ -7,7 +7,7 @@
 <link rel="home" href="../index.html" title="Chapter&#160;1.&#160;Boost.DLL">
 <link rel="up" href="../index.html" title="Chapter&#160;1.&#160;Boost.DLL">
 <link rel="prev" href="getting_started.html" title="Getting started">
-<link rel="next" href="missuses.html" title="Missuses">
+<link rel="next" href="mangled_import.html" title="Mangled Import">
 </head>
 <body bgcolor="white" text="black" link="#0000FF" vlink="#840084" alink="#0000FF">
 <table cellpadding="2" width="100%"><tr>
@@ -20,7 +20,7 @@
 </tr></table>
 <hr>
 <div class="spirit-nav">
-<a accesskey="p" href="getting_started.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/prev.png" alt="Prev"></a><a accesskey="u" href="../index.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/up.png" alt="Up"></a><a accesskey="h" href="../index.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/home.png" alt="Home"></a><a accesskey="n" href="missuses.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/next.png" alt="Next"></a>
+<a accesskey="p" href="getting_started.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/prev.png" alt="Prev"></a><a accesskey="u" href="../index.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/up.png" alt="Up"></a><a accesskey="h" href="../index.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/home.png" alt="Home"></a><a accesskey="n" href="mangled_import.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/next.png" alt="Next"></a>
 </div>
 <div class="section">
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
@@ -46,7 +46,7 @@
       a C function from Windows dll</a></span></dt>
 </dl></div>
 <p>
-      Tutorial is provided to give you an idea of how to create and use plugins.
+      This Tutorial is provided to give you an idea of how to create and use plugins.
     </p>
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
@@ -1237,7 +1237,7 @@ location: "/tutorial8_static"</pre>
 </tr></table>
 <hr>
 <div class="spirit-nav">
-<a accesskey="p" href="getting_started.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/prev.png" alt="Prev"></a><a accesskey="u" href="../index.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/up.png" alt="Up"></a><a accesskey="h" href="../index.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/home.png" alt="Home"></a><a accesskey="n" href="missuses.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/next.png" alt="Next"></a>
+<a accesskey="p" href="getting_started.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/prev.png" alt="Prev"></a><a accesskey="u" href="../index.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/up.png" alt="Up"></a><a accesskey="h" href="../index.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/home.png" alt="Home"></a><a accesskey="n" href="mangled_import.html"><img src="http://www.boost.org/doc/libs/1_60_0/doc/src/images/next.png" alt="Next"></a>
 </div>
 </body>
 </html>
