--- a/BOOST_DLL_SELECTANY.html
+++ b/BOOST_DLL_SELECTANY.html
@@ -33,13 +33,13 @@
 
 </span>BOOST_DLL_SELECTANY</pre></div>
 <div class="refsect1">
-<a name="idm46463238701376"></a><h2>Description</h2>
+<a name="idm45127246886928"></a><h2>Description</h2>
 <p>This macro does not work on Android, IBM XL C/C++ and MinGW+Windows because of linker problems with exporting weak symbols (See <a href="https://code.google.com/p/android/issues/detail?id=70206," target="_top">https://code.google.com/p/android/issues/detail?id=70206,</a> <a href="https://sourceware.org/bugzilla/show_bug.cgi?id=17480" target="_top">https://sourceware.org/bugzilla/show_bug.cgi?id=17480</a>) </p>
 </div>
 </div>
 <table xmlns:rev="http://www.cs.rpi.edu/~gregod/boost/tools/doc/revision" width="100%"><tr>
 <td align="left"></td>
-<td align="right"><div class="copyright-footer">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin<br>Copyright &#169; 2015, 2016 Antony Polukhin<p>
+<td align="right"><div class="copyright-footer">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin<br>Copyright &#169; 2015 Antony Polukhin<br>Copyright &#169; 2016 Antony Polukhin, Klemens Morgenstern<p>
         Distributed under the Boost Software License, Version 1.0. (See accompanying
         file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
       </p>
