--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 <span class="firstname">Antony</span> <span class="surname">Polukhin</span>
 </h3></div></div>
 <div><p class="copyright">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin</p></div>
-<div><p class="copyright">Copyright &#169; 2015, 2016 Antony Polukhin</p></div>
+<div><p class="copyright">Copyright &#169; 2015 Antony Polukhin</p></div>
+<div><p class="copyright">Copyright &#169; 2016 Antony Polukhin, Klemens Morgenstern</p></div>
 <div><div class="legalnotice">
 <a name="boost_dll.legal"></a><p>
         Distributed under the Boost Software License, Version 1.0. (See accompanying
@@ -145,7 +146,7 @@
 </div>
 </div>
 <table xmlns:rev="http://www.cs.rpi.edu/~gregod/boost/tools/doc/revision" width="100%"><tr>
-<td align="left"><p><small>Last revised: June 04, 2016 at 08:37:53 GMT</small></p></td>
+<td align="left"><p><small>Last revised: June 17, 2016 at 19:37:44 GMT</small></p></td>
 <td align="right"><div class="copyright-footer"></div></td>
 </tr></table>
 <hr>
