--- a/BOOST_DLL_ALIAS_SECTIONED.html
+++ b/BOOST_DLL_ALIAS_SECTIONED.html
@@ -33,7 +33,7 @@
 
 </span>BOOST_DLL_ALIAS_SECTIONED(FunctionOrVar, AliasName, SectionName)</pre></div>
 <div class="refsect1">
-<a name="idm46463238649488"></a><h2>Description</h2>
+<a name="idm45127246835184"></a><h2>Description</h2>
 <p>
 <span class="bold"><strong>Example:</strong></span> </p>
 <pre class="programlisting"><span class="keyword">namespace</span> <span class="identifier">foo</span> <span class="special">{</span>
@@ -70,7 +70,7 @@
 </div>
 <table xmlns:rev="http://www.cs.rpi.edu/~gregod/boost/tools/doc/revision" width="100%"><tr>
 <td align="left"></td>
-<td align="right"><div class="copyright-footer">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin<br>Copyright &#169; 2015, 2016 Antony Polukhin<p>
+<td align="right"><div class="copyright-footer">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin<br>Copyright &#169; 2015 Antony Polukhin<br>Copyright &#169; 2016 Antony Polukhin, Klemens Morgenstern<p>
         Distributed under the Boost Software License, Version 1.0. (See accompanying
         file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
       </p>
