--- a/BOOST_DLL_AUTO_ALIAS.html
+++ b/BOOST_DLL_AUTO_ALIAS.html
@@ -33,7 +33,7 @@
 
 </span>BOOST_DLL_AUTO_ALIAS(FunctionOrVar)</pre></div>
 <div class="refsect1">
-<a name="idm46463238623488"></a><h2>Description</h2>
+<a name="idm45127246809184"></a><h2>Description</h2>
 <p>This macro is useful in cases of long mangled C++ names. For example some <code class="computeroutput">void boost::foo(std::sting)</code> function name will change to something like <code class="computeroutput">N5boostN3foosE</code> after mangling. Importing function by <code class="computeroutput">N5boostN3foosE</code> name does not looks user friendly, especially assuming the fact that different compilers have different mangling schemes.*</p>
 <p>Must be used in scope where FunctionOrVar declared. FunctionOrVar must be a valid C name, which means that it must not contain <code class="computeroutput">::</code>.</p>
 <p>Functions or variables in global namespace must not have names same as FunctionOrVar.</p>
@@ -63,7 +63,7 @@
 </div>
 <table xmlns:rev="http://www.cs.rpi.edu/~gregod/boost/tools/doc/revision" width="100%"><tr>
 <td align="left"></td>
-<td align="right"><div class="copyright-footer">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin<br>Copyright &#169; 2015, 2016 Antony Polukhin<p>
+<td align="right"><div class="copyright-footer">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin<br>Copyright &#169; 2015 Antony Polukhin<br>Copyright &#169; 2016 Antony Polukhin, Klemens Morgenstern<p>
         Distributed under the Boost Software License, Version 1.0. (See accompanying
         file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
       </p>
