--- a/BOOST_DLL_FORCE_ALIAS_INSTANTIATION.html
+++ b/BOOST_DLL_FORCE_ALIAS_INSTANTIATION.html
@@ -33,13 +33,13 @@
 
 </span>BOOST_DLL_FORCE_ALIAS_INSTANTIATION</pre></div>
 <div class="refsect1">
-<a name="idm46463238713600"></a><h2>Description</h2>
+<a name="idm45127246899152"></a><h2>Description</h2>
 <p>Define this macro to explicitly specify translation unit in which alias must be instantiated. See section 'Limitations' for more info. You may find usage examples in source codes of almost each tutorial. Must be used in code, when <a class="link" href="BOOST_DLL_FORCE_NO_WEAK_EXPORTS.html" title="Macro BOOST_DLL_FORCE_NO_WEAK_EXPORTS">BOOST_DLL_FORCE_NO_WEAK_EXPORTS</a> is defined </p>
 </div>
 </div>
 <table xmlns:rev="http://www.cs.rpi.edu/~gregod/boost/tools/doc/revision" width="100%"><tr>
 <td align="left"></td>
-<td align="right"><div class="copyright-footer">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin<br>Copyright &#169; 2015, 2016 Antony Polukhin<p>
+<td align="right"><div class="copyright-footer">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin<br>Copyright &#169; 2015 Antony Polukhin<br>Copyright &#169; 2016 Antony Polukhin, Klemens Morgenstern<p>
         Distributed under the Boost Software License, Version 1.0. (See accompanying
         file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
       </p>
